removed particle effect

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+
+/* my css */
+
+#canvas1 {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  height: 50vh;
+  width: 100%;
+  background: linear-gradient(to bottom right, black, rgb(117, 78, 34));
+}
