--- a/src/App.css
+++ b/src/App.css
@@ -39,12 +39,7 @@
 
 
 /* my css */
-
-#canvas1 {
-  position: absolute;
-  width: 100%;
-  left: 0;
-  height: 50vh;
-  width: 100%;
-  background: linear-gradient(to bottom right, black, rgb(117, 78, 34));
+.my-logo {
+  width: '30px';
+  height: '30px';
 }
